src/App.scss
/* ... */
.section_name {
  @include font ('Minecrafter', 3rem, $whiteColor);
  margin-bottom: 1rem;
  letter-spacing: 0.2rem;
  border-bottom: 2px solid $orangeColor;
}


.projects {
  width: $contentWidth;
  margin-inline: auto;
  margin-top: $marginTop_between_sections;

  button {
    @include font ('Russo One', 1.2rem, $orangeColor);
    background: black;
    cursor: pointer;
    padding: 8px;
    border: 2px solid $whiteColor;
    position: relative;
  }

  button:hover {
    border: 2px solid $orangeColor;
    top: 2px;
    left: 2px;
    box-shadow: 1px 3px 5px $whiteColor;
  }


  .project_info {
    text-align: center;
    position: relative;
    width: 100%;
    height: fit-content;
    right: 0;
    transition: 0.3s linear;
    z-index: 1;
    display: flex;
    flex-direction: column;
    background: $orangeColor;
    padding: 5px 0;

    .project_name {
      padding-top: 5px;

      a {
        text-decoration: none;
        @include font ('Minecrafter', 1.2rem, $whiteColor);
      }
    }

    ul {
      margin-left: auto;
      margin-right: auto;
      list-style: none;
      display: flex;
      width: fit-content;
      padding: 5px 0;


      li {
        width: 40px;
        height: 40px;
        margin: 0 5px;

        svg {
          width: 100%;
          height: 100%;
        }
      }

    }

    .project_date {
      @include font ('Russo One', 1rem, $whiteColor);
      padding-top: 5px;
    }

    .github_link {
      padding-top: 5px;

      svg {
        width: 30px;
        height: 30px;
      }
    }
  }

  #second-style {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    margin-top: 16px;
    gap: 5px;
    width: 100%;

    .project_item_new {
      overflow: hidden;
      height: 250px;
      background-position: center;
      background-repeat: no-repeat !important;
      background-size: contain !important;

      .project_info {
        height: 100%;
        align-items: center;
        display: flex;
        flex-direction: unset;
        justify-content: center;
      }
    }

    .hide {
      right: -100%;
    }
  }


  .gallery {
    --s: 320px;
    /* control the size */
    --g: 40px;
    /* control the gap */
    display: grid;
    margin: calc(var(--s) + var(--g));


    .project_item {
      background-position: center !important;
      height: fit-content;
      display: flex;
      align-items: center;
      justify-content: center;
      //position: relative;

      .hide {
        right: -105%;
      }
    }
  }

  .gallery>div {
    grid-area: 1/1;
    width: var(--s);
    aspect-ratio: 1.15;
    object-fit: cover;
    clip-path: polygon(25% -1%, 75% -1%, 101% 50%, 75% 101%, 25% 101%, -1% 50%);
    transform: rotate(var(--_a, 0deg)) translateY(calc(100% + var(--g))) rotate(calc(-1*var(--_a, 0deg))) scale(var(--_t, 1));
    transition: .3s linear;
    overflow: hidden;
  }

  .gallery>div:hover {
    --_t: 1.15;
    background-position: center !important;
  }



  .gallery>div:nth-child(1) {
    --_a: 0deg;
  }

  .gallery>div:nth-child(2) {
    --_a: 60deg
  }

  .gallery>div:nth-child(3) {
    --_a: 120deg
  }

  .gallery>div:nth-child(4) {
    --_a: -60deg
  }

  .gallery>div:nth-child(5) {
    --_a: -120deg
  }

  .gallery>div:nth-child(6) {
    --_a: 180deg;
  }

  .gallery>div:nth-child(7) {
    transform: scale(var(--_t, 1));
  }


  .gallery-body {
    margin: 0;
    display: grid;
    place-content: center;
  }

  #second-style {
    display: none;
  }

}






















































//media
@media (max-width:1015px) {
  ::-webkit-scrollbar {
    background: $bodyColor;
  }


  .navbar {
    display: none;
  }

  .burger {
    display: block;
  }

  .social_links {
    display: none;
  }

  .about {
    width: $contentWidth/2;
    height: fit-content;
    margin-left: auto;
    margin-right: auto;
    padding-top: 0;

    &_2 {
      display: flex;
      flex-direction: column;
      width: 100%;
      padding: 80px 0;

      .photoDiv {
        width: 80%;
        height: $contentWidth/2.5;
        border-radius: 50%;
        border: 4px solid $whiteColor;

        p {
          font-size: 14px;
          line-height: 7px;
          letter-spacing: 1px;
        }

      }

      .about_text {
        flex-direction: column;
        width: 100%;
        margin-left: 0;
        margin-top: $navbarHeight;
        border: 4px solid $whiteColor;
        border-radius: 10px 0px 10px 0px;
        padding: 5px;
      }
    }
  }

  .skills {
    width: unset;
    min-width: fit-content;
    margin-top: $marginTop_media_1015 - 80;


    &_2 {
      display: grid;
      grid-template-columns: repeat(4, 1fr);
      grid-template-rows: none;
      row-gap: 30px;

      .skills_svg {
        filter: unset;
        transition: unset;
      }

      .skills_svg:hover {
        filter: unset;
        transform: none;
      }
    }
  }

  .projects {
    width: unset;
    min-width: fit-content;

    button {
      display: none;
    }

    #gallery-body {
      display: none !important;

    }

    #second-style {
      display: grid !important;
    }
  }

  .sectionDiv {
    margin-top: $marginTop_media_1015;
  }

  .section_name {
    margin-left: auto;
    margin-right: auto;
    width: fit-content;
  }
}
/* ... */

